# QFace

./: CMakeLists.txt  README.md  main.cpp
view/: LoginPage.qml  MainPage.qml  main.qml
